--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,189 +1,147 @@
-/*
-Teal color (used for headings and backgrounds): #4aaaa5
-Regular font color (used for paragraphs and all text besides the headings): #777777
-Main header background color: #ffffff
-Main header border color: #cccccc
-Footer background color: #666666
-Main content background color: #ffffff
-Main content border color: #dddddd
-
-For heading fonts use font-family: 'Georgia', Times, Times New Roman, serif;.
-For all other fonts use 'Arial', 'Helvetica Neue', Helvetica, sans-serif;.
-
-*/
-h1{
-  font-family: 'Georgia', serif;
-  line-height: 80px;
-  color: white;
-}
-
-h2, h3{
-  font-family: 'Georgia', serif;
-  color: #4aaaa5;
-  line-height: 30px;
-  border-bottom: 5px solid #E0E0E0;;
-  padding-bottom: 5px;
-}
-
-
-p, a{
-  font-family: 'Helvetica Neue', sans-serif;
-  color: #777777;
-  text-decoration: none;
-}
-
 body {
-  background-color: #E0E0E0;
-}
-
-a:hover{
-  color: #4aaaa5;
-}
-
-.name, .out{
-  display: inline-block;
-}
-
-
-.header {
-  background-color: #ffffff;
-  border-color: #cccccc;
-  position: fixed;
-  height: 60px;
-  width: 100%;
-  float:left;
-  padding-bottom: 45px;
-  padding-top: 20px;
-  top: 0;
-  left: 0;
-}
-
-.name {
-  margin-left: 100px;
-  padding-bottom: 13px;
-  text-align: center;
-  height: 110px;
-  width: 220px;
-  background-color: #4AAAA5;
-  top: 0;
-  border: 1px solid #dddddd;
-  position: fixed;
-}
-
-
-.out{
-  margin-left: 1000px;
-  line-height: 60px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 34px;
+  color: #777;
+  background: url("../images/concrete_seamless.png");
 }
 
 ul{
- list-style-type: none;
- margin: 0;
- padding: 0;
+  list-style: none;
 }
 
-li {
-  display: inline;
-  padding: 8px;
+.container {
+  width: 100%;
+  margin: 0 auto;
+  clear: both;
 }
 
-.container{
-  margin-top: 90px;
-  display: inline-block;
-}
-
-.main {
-  height: 400px;
-  background-color: #fff;
-  width: 600px;
-  margin-top: 120px;
-  margin-left: 60px;
-  margin-bottom: 120px;
-  float: left;
-  text-align: center;
-}
-
-aside{
-  height:325px;
-  width:300px;
-  margin-top:120px;
-  margin-left: 300px;
-  float:left;
-  background-color: #fff;
-  display: inline-block;
-  text-align: center;
-}
-
-#logoLink {
+.panel-body img {
+  width: 100px;
   height: 100px;
-  width:100px;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
 }
 
-#profilePic{
+
+#logo{
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  margin-left: 80px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
+}
+
+#out{
+  margin-top: 40px;
+}
+
+#main-section{
+  padding-top: 30px;
+  background: #fff;
+  border: 1px solid #ddd;
+  max-width: 760px;
+  margin: 0 0 40px 90px;
+}
+
+#main-section p {
+  margin-left: 10px;
+}
+
+h1{
+  padding-bottom: 20px;
+  font-size: 36px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
+}
+img{
   height: 200px;
   width: 200px;
-  float: left;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 10px;
+  margin: 0 0 10px 10px;
 }
 
-.contactMe{
-  text-align: left;
-  padding-left: 15px;
-  line-height: 30px;
+#sidebar{
+  float: right;
+
 }
 
 footer {
-  position:fixed;
-  bottom:0;
-  background-color: #666666;
-  width:100%;
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
   text-align: center;
-  left: 0;
-  margin-left: auto;
-}
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+  }
 
-#footText {
-  color: #bbbcbf;
-}
+  #contact-form ul {
+    margin-bottom: 20px;
+  }
 
-.mainPortfolio{
-    height: 700px;
-    background-color: #fff;
-    width: 600px;
-    margin-top: 120px;
-    margin-left: 60px;
-    margin-bottom: 120px;
+  #contact-form li {
+    margin-bottom: 10px;
+  }
+
+  label, input[type=text], input[type=email], textarea {
+    display: block;   width: 100%;
+  }
+
+  input[type=text], input[type=email], textarea {
+    height: 35px;
+    padding: 0 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+  }
+
+  textarea {
+    height: 200px;
+  }
+
+  input[type=submit] {
+    padding: 10px 30px;
+    font-size: 18px;
+    color: #fff;
+    cursor: pointer;
+    background: #4aaaa5;
+    border: 0 none;
+    margin-left: 30px;
+  }
+
+  .work {
+    position: relative;
     float: left;
+    width: 274px;
+    margin: 20px 0 25px;
+    overflow: auto;
+  }
+
+  .work:nth-child(even) {
+    margin-right: 40px;
+  }
+
+  .work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+  }
+
+  .work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #fff;
     text-align: center;
-}
-
-.mainContact{
-    height: 500px;
-    background-color: #fff;
-    width: 600px;
-    margin-top: 120px;
-    margin-left: 60px;
-    margin-bottom: 120px;
-    float: left;
-    text-align: center;
-}
-
-button{
-  height: 50px;
-  width: 100px;
-  background-color: #4aaaa5;
-  color: white;
-  font-family: 'Helvetica Neue', sans-serif;
-  font-size: 14px;
-  text-align: center;
-}
-
-#loremPixel{
-  float: center;
-}
+    background: #4aaaa5;
+    border-bottom: 0;
+  }
